--- a/frontend/src/Components/VendorApp/VendorApp.css
+++ b/frontend/src/Components/VendorApp/VendorApp.css
@@ -1,4 +1,5 @@
 #FileFeaturePage {
     display: flex;
+    background-color: rgb(229, 229, 229);
  }
  
